2008-03-17
	* src/auth.c,src/password.c: mark user-visible strings for
	translation (Michael Calmer).
	* configure.ac: call macros to set up for gettext (Michael Calmer)
	* po/POTFILES.in: add (Michael Calmer)
	* po/Makevars: add

2008-03-10:
	* NEWS, pam_krb5.spec: update version, note last changes
	* README: note the new SCM location
	* src/minikafs.c: remove workaround for NI_MAXHOST not being defined,
	because it's noise until we need it somewhere.

2008-03-07:
	* src/password.c: force at least one attempt to authenticate using
	the KDC, even in the pathological case where there's no previously-
	entered password and we were told not to ask for one (#400611)
	* src/options.c,src/minikafs.c,src/afs5log.c: merge Jan Iven's changes
	to add a "nullafs" option, so that when we're guessing the principal
	name for an AFS service we'll try the no-instance version first
	(#249558)
	* src/minikafs.c: if we're going to guess the realm name because
	the whereis pioctl failed, guess the far-more-likely-to-be-correct
	upper cased version of the cell's name than the cell's name.

2008-03-03:
	* src/options.c: update copyright date for token_strategy stuff.

2008-03-03:
	* src/noafs.c: fix signature of stub version of minikafs_log().

2008-02-18:
	* src/minikafs.c: flesh out some getprop bits, but don't use them
	because the number of KDC round trips would go _way_ up

2008-02-18:
	* src/minikafs.c: stub out the routines to use the cache manager's
	rxk5.enctypes property, if it reports one

2008-02-14:
	* src/password.c,src/prompter.c: suppress compiler warnings about how
	we use prompter callback data.

2008-02-14:
	* src/sly.c: suppress a compiler warning calling tf_init().

2008-02-14:
	* src/minikafs.c: rework formatting of tokens to use indirections
	provided by v5.c instead of poking at creds structures directly

2008-02-14:
	* src/v5.c,src/v5.h(v5_creds_get_etype): remove the need for the
	context pointer.
	* src/v5.c,src/v5.h(v5_creds_key_contents): return const data.