@@ -110,7 +110,7 @@ main(int argc, char **argv)
 	char local[PATH_MAX], home[PATH_MAX], path[PATH_MAX];
 	char *homedir, *cell, *principal, *pathdir, *strategy;
 	int i, j, try_v5_2b_only, try_rxk5_only, cells, process_options;
-	int try_null_afs_first = 0, methods[8];
+	int methods[8];
 	krb5_context ctx;
 	krb5_ccache ccache;
 	uid_t uid;
@@ -174,7 +174,8 @@ main(int argc, char **argv)
 				try_rxk5_only = !try_rxk5_only;
 				break;
 			case 'n':
-				try_null_afs_first = !try_null_afs_first;
+				log_options.null_afs_first =
+					!log_options.null_afs_first;
 				break;
 			case 'v':
 				break;
